--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-/Assets/Scenes/Map Simon.unity
+#/Assets/Scenes/Map Simon.unity
 /Assets/Scenes/skal se.unity
